:books: docs: Nova documentação para rota de listar usuarios com order by e order
