# docs/swagger.yaml
@@ -1,3 +1,30 @@
+definitions:
+  usuarios.ListaUsuarios:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/usuarios.Usuario'
+        type: array
+    type: object
+  usuarios.Usuario:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      nome:
+        type: string
+      removed_at:
+        type: string
+      senha:
+        type: string
+      tipo:
+        type: integer
+      updated_at:
+        type: string
+    type: object
 info:
   contact:
     email: caiosousafernandesferreira@hotmail.com
@@ -72,6 +99,46 @@ paths:
       summary: POST a new User
       tags:
       - Usuarios
+  /usuarios/list_user:
+    get:
+      consumes:
+      - application/json
+      description: GET all people with sort orderBy & || order (desc, cresc)
+      parameters:
+      - description: column
+        enum:
+        - id
+        - nome
+        - created_at
+        in: query
+        name: orderBy
+        type: string
+      - description: order desc
+        in: query
+        name: order
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/usuarios.ListaUsuarios'
+            type: array
+        "400":
+          description: error
+          schema:
+            type: string
+        "401":
+          description: error
+          schema:
+            type: string
+      security:
+      - bearerAuth: []
+      summary: GET all people with sort
+      tags:
+      - Usuario
 securityDefinitions:
   bearerAuth:
     in: header
